--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -47,7 +47,7 @@
             = link_to "Edit", edit_account_path(account.id)
             = link_to "Delete", account_path(account.id), method: :delete, data: {confirm: "Are you sure?"}
   .div.account-button
-    =link_to "Add New User", new_user_registration_path
+    =link_to "Add New User", new_user_path
 
 -else
   .div.main-header 
