added wallet balance to market_portfolios#new

--- a/app/views/market_portfolios/new.html.haml
+++ b/app/views/market_portfolios/new.html.haml
@@ -1,4 +1,6 @@
 %h1 Trade?
 %p Should be the form for markets/:market_id/market_portfolios#new
 
+%h1= "Wallet balance: #{@wallet.actual_balance}"
+
 = render 'form'
