changed path of the View link to new_market_log_path

--- a/app/views/markets/index.html.haml
+++ b/app/views/markets/index.html.haml
@@ -43,4 +43,4 @@
             %td.market-header-6{"data-label" => "Selling Price"}
               = "$#{market.selling_price}"
             %td.market-header-10{"data-label" => "Actions"}
-              = link_to 'View', new_market_market_portfolio_path(market.id)
+              = link_to 'View', new_market_log_path(market.id)
