--- a/app/views/portfolios/index.html.haml
+++ b/app/views/portfolios/index.html.haml
@@ -1,54 +1,54 @@
-- if user_signed_in?
-  .div.main-header 
-    .div.logo
-      =image_tag "logo/logo.png", width: "auto", height: "120px"
-    .span.nav-bar-link
-      =link_to 'Home', root_path
-    .span.nav-bar-link
-      =link_to 'Wallet', wallets_path
-    .span.nav-bar-link
-      =link_to 'Portfolio', portfolios_path
-    .span.nav-bar-link
-      =link_to 'Market', markets_path
-    .span.nav-bar-link
-      =link_to 'Log Out', destroy_user_session_path, method: :delete
-
-  .div.account-welcome-container
-    %h1.account-header= "Hello, #{current_user.username}!"
-    %p.account-sub Here's your portfolio.
-
 .container
-  %table
-    %thead
-      %th User Id
-      %th Account Id
-      %th Portfolio Id
-      %th Email
-      %th First Name
-      %th Last Name
-      %th Actions
-    %tbody
-      - @portfolios.each do |portfolio|
-        %tr
-          %td{"data-label" => "User Id"}
-            = portfolio.account.user.id
-          %td{"data-label" => "Account Id"}
-            = portfolio.account_id
-          %td{"data-label" => "Portfolio Id"}
-            = portfolio.id
-          %td{"data-label" => "Email"}
-            = portfolio.account.user.email
-          %td{"data-label" => "First Name"}
-            = portfolio.account.first_name
-          %td{"data-label" => "Last Name"}
-            = portfolio.account.last_name
-            
-          %td{"data-label" => "Actions"}
-            = link_to 'Show', portfolio_path(portfolio.id)
-            
-            = link_to 'Edit', edit_portfolio_path(portfolio.id)
-            |
-            = link_to 'Delete', portfolio_path(portfolio.id), method: :delete, data: { confirm: 'Are you sure?' }
+  - if user_signed_in?
+    .div.main-header 
+      .div.logo
+        =image_tag "logo/logo.png", width: "auto", height: "120px"
+      .span.nav-bar-link
+        =link_to 'Home', root_path
+      .span.nav-bar-link
+        =link_to 'Wallet', wallets_path
+      .span.nav-bar-link
+        =link_to 'Portfolio', portfolios_path
+      .span.nav-bar-link
+        =link_to 'Market', markets_path
+      .span.nav-bar-link
+        =link_to 'Log Out', destroy_user_session_path, method: :delete
 
-.p.sub-button
-  = link_to 'Add Portfolio', new_portfolio_path
+    .div.market-welcome-container
+      %h1.market-header= "Hello, #{current_user.username}!"
+      %p.market-sub Here's your portfolio.
+
+    %table.all-markets-container
+      %thead.market-table-header
+        %th.market-header-6 User Id
+        %th.market-header-6 Account Id
+        %th.market-header-6 Portfolio Id
+        %th.market-header-10 Email
+        %th.market-header-10 First Name
+        %th.market-header-10 Last Name
+        %th.market-header-10 Actions
+      %tbody
+        - @portfolios.each do |portfolio|
+          %tr.market-table-column
+            %td.market-header-6{"data-label" => "User Id"}
+              = portfolio.account.user.id
+            %td.market-header-6{"data-label" => "Account Id"}
+              = portfolio.account_id
+            %td.market-header-6{"data-label" => "Portfolio Id"}
+              = portfolio.id
+            %td.market-header-10{"data-label" => "Email"}
+              = portfolio.account.user.email
+            %td.market-header-10{"data-label" => "First Name"}
+              = portfolio.account.first_name
+            %td.market-header-10{"data-label" => "Last Name"}
+              = portfolio.account.last_name
+              
+            %td.market-header-10{"data-label" => "Actions"}
+              = link_to 'Show', portfolio_path(portfolio.id)
+              
+              = link_to 'Edit', edit_portfolio_path(portfolio.id)
+              |
+              = link_to 'Delete', portfolio_path(portfolio.id), method: :delete, data: { confirm: 'Are you sure?' }
+
+  .p.sub-button
+    = link_to 'Add Portfolio', new_portfolio_path
