--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,13 +1,3 @@
-.div.main-header 
-  .div.logo
-    =image_tag "logo/logo.png", width: "auto", height: "120px"
-  .span.nav-bar-link
-    =link_to 'Home', root_path
-  .span.nav-bar-link
-    =link_to 'View All Accounts', accounts_path
-  .span.nav-bar-link
-    =link_to 'Log Out', destroy_user_session_path, method: :delete
-
 .div.account-show-container
   %h1.account-show-header= "#{@account.first_name} #{@account.last_name}"
   %p.account-sub-show Account details
@@ -15,8 +5,9 @@
   %p.account-detail="Last Name: #{@account.last_name}"
   %p.account-detail="Contact Number: #{@account.contact_number}"
   %p.account-detail="Address: #{@account.address}"
-  %p.account-detail="Verification Status: #{@account.verified}"
-  %p.account-detail="Verification Date: #{@account.verified_at}"
+  - if current_user.user_type == "Admin"
+    %p.account-detail="Verification Status: #{@account.verified}"
+    %p.account-detail="Verification Date: #{@account.verified_at}"
   
 .div.account-button-show
   = link_to "Edit Account Details", edit_account_path(@account.id)
