changed rendered nav bar contents of accounts#index if signed in as buyer

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -53,13 +53,34 @@
   .div.account-button
     =link_to "Add New User", new_user_path
 
+- elsif user_signed_in? && current_user.user_type == "Buyer"
+  .div.main-header-home
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px"
+    .span.nav-bar-link
+      =link_to 'Home', root_path
+    .span.nav-bar-link
+      =link_to 'Wallet', wallets_path
+    .span.nav-bar-link
+      =link_to 'Portfolio', portfolios_path
+    .span.nav-bar-link
+      =link_to 'Market', markets_path
+    .span.nav-bar-link
+      =link_to 'Log Out', destroy_user_session_path, method: :delete
+
+  .div.welcome-text-home
+    %h1.welcome-home Welcome to PenguInvest!
+    %p.welcome-sub-home You're one of the millions who've already discovered smarter investing in multiple types of assets
+  .div.main-footer
+    .span.footer-text Created by Thea Kaylee Libunao & Ria Almeda. © 2022. Disclaimer: This app is created for educational purposes only.
+
 -else
   .div.main-header 
-  .div.logo
-    =image_tag "logo/logo.png", width: "auto", height: "120px" 
-    .span.nav-bar-link
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px" 
+    .span.nav-bar-link-home
       = link_to 'Log In', new_user_session_path
-    .span.nav-bar-button
+    .span.nav-bar-button-home
       = link_to 'Sign Up', new_user_registration_path
 
   .div.welcome-text
