added initial update for user signed up

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,7 +4,7 @@
       =image_tag "logo/logo.png", width: "auto", height: "120px" 
     .span.nav-bar-link-home
       =link_to 'View All Accounts', accounts_path
-    .span.nav-bar-link-home
+    .span.nav-bar-button-home
       =link_to 'Log Out', destroy_user_session_path, method: :delete
 
   .div.welcome-text-home
@@ -20,12 +20,14 @@
     .span.nav-bar-link
       =link_to 'Home', root_path
     .span.nav-bar-link
-      =link_to 'Wallet', wallets_path
+      =link_to 'Profile', account_path(current_user.account.id)
     .span.nav-bar-link
       =link_to 'Portfolio', portfolios_path
     .span.nav-bar-link
       =link_to 'Market', markets_path
     .span.nav-bar-link
+      =link_to 'Logs', logs_path
+    .span.nav-bar-button-home
       =link_to 'Log Out', destroy_user_session_path, method: :delete
 
   .div.welcome-text-home
