--- a/app/views/portfolios/index.html.haml
+++ b/app/views/portfolios/index.html.haml
@@ -20,7 +20,7 @@
       %p.account-sub-show portfolio preview
       %p.market-sub= "Wallet balance: $#{@wallet.actual_balance}"
 
-    %table.all-markets-container
+    %table.all-portfolios-container
       %thead.market-table-header
         %th.portfolio-header-10 Stock Name
         %th.portfolio-header-6 Symbol
