--- a/app/views/markets/index.html.haml
+++ b/app/views/markets/index.html.haml
@@ -1,22 +1,23 @@
-.container
-  - if user_signed_in?
-    .div.main-header
-      .div.logo
-        =image_tag "logo/logo.png", width: "auto", height: "120px" 
-      .span.nav-bar-link
-        =link_to 'Home', root_path
-      .span.nav-bar-link
-        =link_to 'Wallet', wallets_path
-      .span.nav-bar-link
-        =link_to 'Portfolio', portfolios_path
-      .span.nav-bar-link
-        =link_to 'Market', markets_path
-      .span.nav-bar-link
-        =link_to 'Log Out', destroy_user_session_path, method: :delete
+- if user_signed_in?
+  .div.main-header 
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px"
+    .span.nav-bar-link
+      =link_to 'Home', root_path
+    .span.nav-bar-link
+      =link_to 'Profile', account_path(current_user.account.id)
+    .span.nav-bar-link
+      =link_to 'Portfolio', portfolios_path
+    .span.nav-bar-link
+      =link_to 'Market', markets_path
+    .span.nav-bar-link
+      =link_to 'Logs', logs_path
+    .span.nav-bar-button-home
+      =link_to 'Log Out', destroy_user_session_path, method: :delete
 
-    .div.market-welcome-container
-      %h1.market-header= "Hello, #{current_user.username}!"
-      %p.market-sub STOCK MARKET
+  .div.market-welcome-container
+    %h1.market-header= "Hello, #{current_user.username}!"
+    %p.account-sub-show Stock Market
 
     %table.all-markets-container
       %thead.market-table-header
