--- a/app/views/markets/index.html.haml
+++ b/app/views/markets/index.html.haml
@@ -24,7 +24,7 @@
         %th.market-header-10 Stock Name
         %th.market-header-6 Symbol
         %th.market-header-6 Volume
-        %th.market-header-6 Trades
+        -# %th.market-header-6 Trades
         %th.market-header-6 Buying Price
         %th.market-header-6 Selling Price
         %th.market-header-10 Actions
@@ -37,8 +37,8 @@
               = market.symbol
             %td.market-header-6{"data-label" => "Volume"}
               = market.volume
-            %td.market-header-6{"data-label" => "Trades"}
-              = market.trades
+            -# %td.market-header-6{"data-label" => "Trades"}
+            -#   = market.trades
             %td.market-header-6{"data-label" => "Buying Price"}
               = "$#{market.buying_price}"
             %td.market-header-6{"data-label" => "Selling Price"}
