updated stocks table

--- a/app/assets/stylesheets/market.scss
+++ b/app/assets/stylesheets/market.scss
@@ -44,7 +44,7 @@
 .market-table-header {
   background-color: $dark-blue;
   color: $lighter-grey;
-  width: 852px;
+  width: auto;
   display: flex;
   justify-content: space-around;
   overflow: hidden;
