--- a/app/assets/stylesheets/buy-sell.scss
+++ b/app/assets/stylesheets/buy-sell.scss
@@ -27,3 +27,17 @@
   border-radius: 8px;
   margin-bottom: 10px;
 }
+
+.bs-error-container {
+  top: 200px;
+  height: 100px;
+  color: $dark-blue;
+  width: 25vw;
+  margin: auto;
+  position: relative;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
