updated conditional edit account view, updated buy sell color

--- a/app/assets/stylesheets/buy-sell.scss
+++ b/app/assets/stylesheets/buy-sell.scss
@@ -4,7 +4,7 @@
   top: 200px;
   right: 90px;
   height: 110px;
-  background-color: $light-blue;
+  background-color: $med-grey;
   width: 25vw;
   margin: auto;
   position: absolute;
@@ -20,7 +20,7 @@
   top: 350px;
   right: 90px;
   height: 110px;
-  background-color: $orange;
+  background-color: $dark-blue;
   width: 25vw;
   margin: auto;
   position: absolute;
