--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,14 +1,37 @@
-.div.main-header 
-  .div.logo
-    =image_tag "logo/logo.png", width: "auto", height: "120px"
-  .span.nav-bar-link
-    =link_to 'Home', root_path
-  .span.nav-bar-link
-    =link_to 'View All Accounts', accounts_path
-  .span.nav-bar-link
-    =link_to 'Log Out', destroy_user_session_path, method: :delete
-.div.account-edit-container
-  %h1.account-header-edit= "Hello, Admin #{current_user.username}!"
-  %p.account-sub-edit= "Update #{@account.first_name}'s account details"   
+- if user_signed_in? && current_user.user_type == "Admin"
+  .div.main-header 
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px"
+    .span.nav-bar-link
+      =link_to 'Home', root_path
+    .span.nav-bar-link
+      =link_to 'View All Accounts', accounts_path
+    .span.nav-bar-link
+      =link_to 'Log Out', destroy_user_session_path, method: :delete
+  .div.account-edit-container
+    %h1.account-header-edit= "Hello, Admin #{current_user.username}!"
+    %p.account-sub-edit= "Update #{@account.first_name}'s account details"   
 
-= render 'form' 
+  = render 'form' 
+
+- elsif user_signed_in? && current_user.user_type == "Buyer"
+  .div.main-header 
+    .div.logo
+      =image_tag "logo/logo.png", width: "auto", height: "120px"
+    .span.nav-bar-link
+      =link_to 'Home', root_path
+    .span.nav-bar-link
+      =link_to 'Profile', account_path(current_user.account.id)
+    .span.nav-bar-link
+      =link_to 'Portfolio', portfolios_path
+    .span.nav-bar-link
+      =link_to 'Market', markets_path
+    .span.nav-bar-link
+      =link_to 'Logs', logs_path
+    .span.nav-bar-button-home
+      =link_to 'Log Out', destroy_user_session_path, method: :delete
+  .div.account-edit-container
+    %h1.account-header-edit= "Hello #{current_user.username}!"
+    %p.account-sub-edit= "Update your account details"   
+
+  = render 'form' 
