--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -5,7 +5,7 @@
     =link_to 'Home', root_path
   .span.nav-bar-link
     =link_to 'View All Accounts', accounts_path
-  .span.nav-bar-link
+  .span.nav-bar-button-home
     =link_to 'Log Out', destroy_user_session_path, method: :delete
 .div.account-welcome-container
   %h1.account-header= "Add New Account"
