--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,10 @@
   <div class ="logo">
   <%=image_tag "logo/logo.png", width: "auto", height: "120px" %>
   </div>
-  <span class="nav-bar-link"><%= render "devise/shared/links"%></span>
+  <span class="nav-bar-link-home"> <%= link_to 'Home', root_path %> </span>
+  <span class="nav-bar-button-home"> <%= link_to 'Log In', new_user_session_path %> </span>
+  
+ 
 </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
